2022-03-06 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Remove rlca when sub already sets carry.

2022-03-05 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/SDCCgen.c:
	  Improve labels in inline assembly and fix bug #2831.
	  Patch based on patch by Tom Li.
	* device/lib/_memmove.c,
	  device/lib/sm83/crt0.s,
	  device/lib/sm83/memcpy.s,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Add missing copyright notices.

2022-03-05 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve debug output.

2022-03-04 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c,
	  src/mos6502/gen.h:
	  Change asmop.type to enum.
	* src/mos6502/gen.c:
	  Remove unused "result" parameter from aopOp().
	* src/mos6502/gen.c:
	  Allow AX in genCpl().
	* src/mos6502/gen.c:
	  Remove unused parameters in freeAsmop().
	* src/mos6502/main.c,
	  src/mos6502/main.h:
	  Removed unnecessary main.h

2022-03-03 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/sm83/memcpy.s:
	  Replace redundancy with macros.

2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Disable rule that pessimized some ports.

2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c:
	  Add -bo and -ba for z80, apply patch #399.

2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/sm83/mul.s:
	  Speed up multiplication algorithm.

2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/_memset.c,
	  device/lib/sm83/abs.s,
	  device/lib/sm83/crt0.s,
	  device/lib/sm83/memcpy.s,
	  device/lib/sm83/setjmp.s:
	  Improve sm83 assembly.

2022-03-01 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/asdata.c,
	  sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asxxxx.h:
	  Add -h and hidden -t flags.
	* sdas/asgb/gbadr.c,
	  sdas/asgb/gb.h:
	  Reduce customizations.

2022-03-01 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Improve stdlib code through peephole rules.
